force-app/main/default/staticresources/python/Disappear/src/objects/StudyNote__c.object
<CustomObject>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>4095</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipName>StudyNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Study/Project Note</label>
    <nameField>
        <label>StudyNote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study/Project Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>